--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -33,18 +33,20 @@
 }
  
 .password-container {
+  position: relative;
   display: flex;
   align-items: center;
-  width: 100%;
 }
  
 .password-container .input-field {
-  flex: 1;
-  margin-right: 10px;
+  width: calc(100% - 10px);
 }
  
 .toggle-password {
+  position: absolute;
+  right: 10px;
   cursor: pointer;
+  font-size: 20px;
 }
  
 .continue-button {
